--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 colorama==0.4.6
+configobj==5.0.9
 contourpy==1.2.0
 cycler==0.12.1
 distlib==0.3.8
@@ -35,6 +36,7 @@ mayavi==4.8.2
 mpmath==1.3.0
 mysqlclient==2.2.4
 networkx==3.2.1
+nibabel==5.2.1
 numba==0.59.1
 numpy==1.26.4
 opencv-python==4.9.0.80
@@ -52,6 +54,9 @@ pyasn1_modules==0.4.0
 pyface==8.0.0
 Pygments==2.18.0
 pyparsing==3.1.2
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.15.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
